<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_ordenar_registros"
        android:title="@string/menu_ordenar_registros"
        android:icon="@drawable/icono_ordenar_registros"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_buscar_registros"
        android:title="@string/menu_buscar_registros"
        android:icon="@drawable/icono_buscar_registros"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/menu_numero_registros"
        android:title="@string/menu_numero_registros"
        android:icon="@drawable/icono_numero_registros"
        app:showAsAction="ifRoom">
    </item>


</menu>