<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contrasenas.DetalleRegistros"
    android:background="#E8DAEF">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_titulo"
                android:text="@string/d_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_cuenta"
                android:text="@string/d_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_nombre_usuario"
                android:text="@string/d_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/d_txt_contrasenna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_bold"
                    android:textSize="18sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/d_contrasenna"
                        android:text="@string/d_contrasenna"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/opensans_bold"
                        android:textSize="18sp"
                        android:textColor="#000"
                        />


                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#000"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_sitio_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/d_sitio_web"
                    android:text="@string/d_sitio_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgBtnSitioWeb"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="18sp"
                    />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/imgBtnSitioWeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:src="@drawable/icono_dirigir_web"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_nota"
                android:text="@string/d_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_tiempo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_tiempo_registro"
                android:text="@string/d_tiempo_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:text="@string/d_txt_tiempo_actualizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/d_tiempo_actualizacion"
                android:text="@string/d_tiempo_actualizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#000"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>