<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_item_password"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/candadoazul" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toStartOf="@id/Ib_mas_opciones"
            android:layout_toEndOf="@+id/img_item_password"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/item_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/item_titulo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/item_cuenta" />

            <TextView
                android:id="@+id/item_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/item_nombre_usuario"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_contrasenna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/item_contrasenna"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_sitio_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/item_sitio_web"
                android:visibility="gone" />

            <TextView
                android:id="@+id/item_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/item_nota"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/Ib_mas_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#FFFF"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/icono_mas_opciones"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>