<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="#fff">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icono_genapp"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:text="@string/logSaludo"
            android:textSize="25sp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/logMensaje"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/logEtPass"
                android:hint="@string/logEtPass"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/logEtConPass"
                android:hint="@string/logEtConPass"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logBtnConfirmar"
            android:text="@string/logBtnConfirmar"
            android:fontFamily="@font/opensans_bold"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#fff"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>